refactor: Replace AppCompat Style for AppTheme with MaterialComponents Style

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="colorEditTextHint">#98A8BF</color>
     <color name="colorHeaderBackground">#55010613</color>
 
+    <color name="colorDark1C">#1C1C1E</color>
+
+
 </resources>
