--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.udacity.asteroidradar.features.main.MainViewModel" />
+            type="com.udacity.asteroidradar.features.main.viewModel.MainViewModel" />
 
     </data>
 
