--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -76,7 +76,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header_image_of_today_frameLayout"
                 app:layout_constraintVertical_bias="0.0"
-                app:listData="@{viewModel.asteroidListMutableStateFlow}"
+                app:listData="@{viewModel.asteroidListStateFlow}"
                 tools:listitem="@layout/item_asteroid" />
 
             <ProgressBar
