feat: Save the selected asteroid position in the RecyclerView when navigating to the Detail screen.
Issue: The workaround solution doesn't fix the issue of recyclerview scrolling to the top of the screen when navigating back to the MainFragment, and the issue caused of using Paging 3 library.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
             type="com.udacity.asteroidradar.features.main.viewModel.MainViewModel" />
 
+        <variable
+            name="mLifecycleOwner"
+            type="androidx.lifecycle.LifecycleOwner" />
     </data>
 
 
@@ -68,14 +70,15 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/asteroid_recycler"
                 android:layout_width="0dp"
+                app:lifecycleOwner="@{mLifecycleOwner}"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
+                app:currentScrolledPosition="@{viewModel.currentSelectedItem}"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header_image_of_today_frameLayout"
-                app:layout_constraintVertical_bias="0.0"
                 app:listData="@{viewModel.asteroidListStateFlow}"
                 tools:listitem="@layout/item_asteroid" />
 
