--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,6 @@
             type="androidx.lifecycle.LifecycleOwner" />
     </data>
 
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -47,7 +46,7 @@
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
-                    app:imageOfToday="@{viewModel.imageOfTheDayMutableStateFlow}"
+                    app:imageOfToday="@{viewModel.imageOfTheDayStateFlow}"
                     app:progressBar="@{imageLoadingWheel}"
                     app:srcCompat="@drawable/placeholder_picture_of_day" />
 
@@ -59,11 +58,10 @@
                     android:layout_gravity="bottom|start"
                     android:background="@color/colorHeaderBackground"
                     android:padding="@dimen/dim_default_margin"
-                    android:contentDescription="@{viewModel.imageOfTheDayMutableStateFlow.title}"
-                    android:text="@{viewModel.imageOfTheDayMutableStateFlow.title}"
+                    android:contentDescription="@{viewModel.imageOfTheDayStateFlow.title}"
+                    android:text="@{viewModel.imageOfTheDayStateFlow.title}"
                     android:textAlignment="viewStart"
                     tools:text="@string/app_name" />
-
 
             </FrameLayout>
 
@@ -92,11 +90,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header_image_of_today_frameLayout"
-                app:loadingStatus="@{viewModel.statusLiveData}" />
+                app:loadingStatus="@{viewModel.statusStateFlow}" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </androidx.core.widget.NestedScrollView>
-
 
 </layout>
