--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -23,8 +23,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/dim_default_margin"
-            android:background="@color/app_background">
+            android:paddingBottom="@dimen/dim_default_margin">
 
             <ImageView
                 android:id="@+id/activity_main_image_of_the_day"
@@ -44,10 +43,9 @@
                 android:layout_marginStart="@dimen/dim_default_margin"
                 android:layout_marginTop="@dimen/dim_default_margin"
                 android:layout_marginEnd="@dimen/dim_default_margin"
-                android:contentDescription="@string/close_approach_data_title"
-                android:text="@string/close_approach_data_title"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                android:contentDescription="@string/text_close_approach_date"
+                android:text="@string/text_close_approach_date"
+                style="@style/InfoStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day" />
@@ -59,8 +57,7 @@
                 android:layout_marginTop="@dimen/dim_4dp"
                 android:contentDescription="@{asteroid.closeApproachDate}"
                 android:text="@{asteroid.closeApproachDate}"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                style="@style/SubInfoStyle"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintTop_toBottomOf="@+id/close_approach_date_label_textView"
@@ -71,10 +68,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_default_margin"
-                android:contentDescription="@string/absolute_magnitude_title"
-                android:text="@string/absolute_magnitude_title"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                android:contentDescription="@string/text_absolute_magnitude"
+                android:text="@string/text_absolute_magnitude"
+                style="@style/InfoStyle"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintTop_toBottomOf="@+id/close_approach_date_textView" />
@@ -84,8 +80,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_4dp"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                style="@style/SubInfoStyle"
                 app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
@@ -96,7 +91,7 @@
                 android:id="@+id/help_imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/astronomical_unit_explanation_button"
+                android:contentDescription="@string/text_description_astronomical_unit_explanation_button"
                 android:onClick="@{() -> detailFragment.displayAstronomicalUnitExplanationDialog()}"
                 android:padding="@dimen/dim_default_margin"
                 app:layout_constraintBottom_toBottomOf="@+id/absolute_magnitude_textView"
@@ -109,10 +104,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_default_margin"
-                android:contentDescription="@string/estimated_diameter_title"
-                android:text="@string/estimated_diameter_title"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                android:contentDescription="@string/text_estimated_diameter"
+                android:text="@string/text_estimated_diameter"
+                style="@style/InfoStyle"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintTop_toBottomOf="@+id/absolute_magnitude_textView" />
@@ -122,8 +116,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_4dp"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                style="@style/SubInfoStyle"
                 app:kmUnitText="@{asteroid.estimatedDiameter}"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
@@ -135,10 +128,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_default_margin"
-                android:contentDescription="@string/relative_velocity_title"
-                android:text="@string/relative_velocity_title"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                android:contentDescription="@string/text_relative_velocity"
+                android:text="@string/text_relative_velocity"
+                style="@style/InfoStyle"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintTop_toBottomOf="@+id/estimated_diameter_textView" />
@@ -148,8 +140,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_4dp"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                style="@style/SubInfoStyle"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintTop_toBottomOf="@+id/relative_velocity_title_textView"
@@ -161,10 +152,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_default_margin"
-                android:contentDescription="@string/distance_from_earth_title"
-                android:text="@string/distance_from_earth_title"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                android:contentDescription="@string/text_distance_from_earth"
+                android:text="@string/text_distance_from_earth"
+                style="@style/InfoStyle"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintTop_toBottomOf="@+id/relative_velocity_textView" />
@@ -174,8 +164,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dim_4dp"
-                android:textAlignment="viewStart"
-                android:textColor="@color/default_text_color"
+                style="@style/SubInfoStyle"
                 app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                 app:layout_constraintEnd_toEndOf="@+id/close_approach_date_label_textView"
                 app:layout_constraintStart_toStartOf="@+id/close_approach_date_label_textView"
