--- a/app/src/main/res/menu/main_overflow_menu.xml
+++ b/app/src/main/res/menu/main_overflow_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/show_week_menu"
-        android:title="@string/next_week_asteroids" />
+        android:title="@string/text_filter_week" />
     <item
         android:id="@+id/show_today_menu"
-        android:title="@string/today_asteroids" />
+        android:title="@string/text_filter_today" />
     <item
         android:id="@+id/show_saved_menu"
-        android:title="@string/saved_asteroids" />
+        android:title="@string/text_filter_saved" />
 </menu>
