feat: EnableEdgeToEdge and add the necessary padding for the SystemBar to fix Android 35 and above UI. The app uses the MaterialToolbar and doesn't automatically add the required padding.
Also, decide the status of StatusBar and SystemBar Style Status, Light or Dark, based on the background color applied in the code.
More detail:
https://developer.android.com/develop/ui/views/layout/edge-to-edge

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimary</item>
-        <item name="colorOnPrimary">@color/colorDark1C</item>
+        <item name="colorOnPrimary">@color/colorWhite</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
 
         <!-- Secondary brand color. -->
