--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="dim_default_margin">16dp</dimen>
     <dimen name="dim_small_margin">8dp</dimen>
     <dimen name="dim_4dp">4dp</dimen>
+    <dimen name="dim_6dp">8dp</dimen>
 
 </resources>
