refactor: Remove unused methods and styles from AppSharedMethods.kt and styles.xml

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,49 +1,3 @@
 <resources>
-
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorPrimary</item>
-        <item name="colorOnPrimary">@color/colorWhite</item>
-        <item name="android:statusBarColor">@color/colorPrimary</item>
-
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/colorAccent</item>
-        <item name="colorSecondaryVariant">@color/colorAccent</item>
-        <item name="colorOnSecondary">@color/colorWhite</item>
-
-        <item name="android:windowDisablePreview">true</item>
-        <item name="android:windowBackground">@color/colorPrimary</item>
-
-    </style>
-
-    <style name="TitleStyle">
-        <item name="android:textColor">@color/colorWhite</item>
-        <item name="android:textSize">@dimen/text_large</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAlignment">viewStart</item>
-    </style>
-
-    <style name="SubtitleStyle">
-        <item name="android:textColor">@color/colorWhite</item>
-        <item name="android:textSize">@dimen/text_sub_title</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAlignment">viewStart</item>
-    </style>
-
-    <style name="InfoStyle">
-        <item name="android:textColor">@color/colorWhite</item>
-        <item name="android:textSize">@dimen/text_normal</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAlignment">viewStart</item>
-    </style>
-
-    <style name="SubInfoStyle">
-        <item name="android:textColor">@color/colorGray</item>
-        <item name="android:textSize">@dimen/text_small</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAlignment">viewStart</item>
-    </style>
-
+    <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
